changed to overflow hidden to fix bug

--- a/Projects/seascape/css/stylesheet.css
+++ b/Projects/seascape/css/stylesheet.css
@@ -3,7 +3,7 @@
 	font-family: "Open Sans";
 }
 body {
-	overflow-x: hidden;
+	overflow: hidden;
 	background: #c9dbe9;
 	background-image: ;
 }
